<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_widget_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_add_todo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_add"
            android:contentDescription="@string/btn_add_todo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_widget_todo_list_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_widget_error_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:text="@string/empty_list_add_todo"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_widget_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/todo_widget_item" />
</LinearLayout>